# ramekin

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.devbox  Dockerfile.test  Dockerfile.ui  Makefile  OPENAPI.md  README.md  baseline-after-run1.txt  baseline-after-run2.txt  baseline-after-run3.txt  baseline-before-run1.txt  baseline-before-run2.txt  baseline-before-run3.txt  cli.env.example  clippy.toml  conductor.json  dev.env.example  diesel.toml  docker-compose.devbox.yml  docker-compose.test.yml  docker-compose.yml  example.dev.env  example.test.env  package-lock.json  process-compose.yaml  pyproject.toml  requirements-test.txt  ruff.toml  test-compose.yaml  test-ui-compose.yaml  test.env.example
.beads/: issues.jsonl
cli/: Cargo.toml  README.md
cli/data/: test-urls.json
cli/src/: enrich_test.rs  enrich_validate.rs  export.rs  generate_test_urls.rs  import.rs  ingredient_categories.rs  ingredient_tests.rs  load_test.rs  main.rs  parse_html.rs  pipeline.rs  pipeline_enrich.rs  pipeline_orchestrator.rs  screenshot.rs  seed.rs
cli/src/pipeline/: mod.rs  output_store.rs  runners.rs  staging.rs  steps.rs
cli/src/pipeline/steps/: fetch_images.rs  mod.rs  save_recipe.rs
crates/ramekin-cli/: Cargo.toml  README.md  generate-client.sh
crates/ramekin-cli/src/: main.rs
crates/ramekin-lib/: Cargo.toml
crates/ramekin-lib/src/: schema.rs
crates/ramekin-server/: Cargo.toml
crates/ramekin-server/src/: api.rs  auth.rs  db.rs  main.rs  models.rs  schema.rs
crates/ramekin-server/src/api/: mod.rs
crates/ramekin-server/src/api/photos/: upload.rs
crates/ramekin-server/src/api/public/: mod.rs
crates/ramekin-server/src/api/recipes/: create.rs  list.rs
crates/ramekin-server/src/api/test/: ping.rs
crates/ramekin-server/src/api/testing/: ping.rs
crates/ramekin-server/src/auth/: db.rs  handlers.rs  mod.rs
ingredient-density/: Cargo.toml  README.md
ingredient-density/src/: density_lookup.rs  lib.rs
ingredient-density/src/data/: curated.json  usda.json
ramekin-core/: Cargo.toml  build.rs
ramekin-core/src/: density_data.json  density_data.rs  error.rs  extract.rs  fetch.rs  image.rs  ingredient_categorizer.rs  ingredient_parser.rs  lib.rs  metric_weights.rs  types.rs  volume_to_weight.rs
ramekin-core/src/ai/: auto_tag.rs  cache.rs  client.rs  config.rs  custom_enrich.rs  mod.rs  photo_extract.rs  types.rs
ramekin-core/src/ai/prompts/: auto_tag.rs  custom_enrich.rs  mod.rs  photo_extract.rs
ramekin-core/src/enrichment/: mod.rs  normalize_ingredients.rs  normalize_times.rs
ramekin-core/src/http/: cache.rs  charset.rs  client.rs  mod.rs  rate_limiter.rs
ramekin-core/src/llm/: caching.rs  claude.rs  fake.rs  mod.rs
ramekin-core/src/pipeline/: executor.rs  mod.rs  step.rs
ramekin-core/src/pipeline/steps/: enrich.rs  enrich_auto_tag.rs  enrich_generate_photo.rs  enrich_metric_weights.rs  enrich_normalize_ingredients.rs  extract_recipe.rs  fetch_html.rs  fetch_images.rs  mod.rs  parse_ingredients.rs  save_recipe.rs
ramekin-core/tests/: golden_tests.rs  ingredient_parsing_tests.rs
ramekin-core/tests/fixtures/: mybakingaddiction_apple_bars.json  seriouseats_cream_biscuits.json  seriouseats_rice_pilaf.json  smittenkitchen_baked_kale_chips.json  smittenkitchen_chicken_wonton_soup.json  smittenkitchen_moms_apple_cake.json
ramekin-core/tests/fixtures/ingredient_parsing/bulk/: 101cookbooks--breakfast-hash-recipe--02.json  101cookbooks--breakfast-hash-recipe--04.json  101cookbooks--breakfast-hash-recipe--09.json  101cookbooks--coleslaw-recipe--01.json  101cookbooks--coleslaw-recipe--02.json  101cookbooks--coleslaw-recipe--04.json  101cookbooks--cucumber-salad-recipe--02.json  101cookbooks--cucumber-salad-recipe--03.json  101cookbooks--cucumber-salad-recipe--07.json  101cookbooks--cucumber-salad-recipe--10.json  101cookbooks--curry-paste-recipe--02.json  101cookbooks--curry-paste-recipe--03.json  101cookbooks--curry-paste-recipe--05.json  101cookbooks--dark-and-stormy-recipe--03.json  101cookbooks--falafel-bowl-recipe--10.json  101cookbooks--goth-hummus-recipe--02.json  101cookbooks--goth-hummus-recipe--03.json  101cookbooks--goth-hummus-recipe--04.json  101cookbooks--healthy-cookie-recipe--04.json  101cookbooks--healthy-cookie-recipe--08.json  101cookbooks--homemade-bouillon-recipe--01.json  101cookbooks--homemade-bouillon-recipe--02.json  101cookbooks--homemade-bouillon-recipe--05.json  101cookbooks--homemade-bouillon-recipe--07.json  101cookbooks--homemade-bouillon-recipe--09.json  101cookbooks--homemade-bouillon-recipe--11.json  101cookbooks--instant-pot-congee-recipe--03.json  101cookbooks--instant-pot-congee-recipe--06.json  101cookbooks--instant-pot-fiasco-beans-recip--01.json  101cookbooks--instant-pot-fiasco-beans-recip--09.json  (+1479 more)
server/: Cargo.toml
server/src/: db.rs  main.rs  models.rs  raw_sql.rs  schema.rs  telemetry.rs  tls.rs  types.rs
server/src/api/: enrich.rs  mod.rs
server/src/api/import/: mod.rs  photos.rs  recipe.rs
server/src/api/meal_plans/: create.rs  delete.rs  list.rs  mod.rs  update.rs
server/src/api/photos/: get.rs  get_thumbnail.rs  list.rs  mod.rs  upload.rs
server/src/api/public/: mod.rs
server/src/api/recipes/: create.rs  delete.rs  export.rs  get.rs  list.rs  mod.rs  rescrape.rs  tags.rs  update.rs  versions.rs
server/src/api/scrape/: capture.rs  create.rs  get.rs  mod.rs  retry.rs
server/src/api/shopping_list/: clear_checked.rs  create.rs  delete.rs  list.rs  mod.rs  sync.rs  update.rs
server/src/api/tags/: create.rs  delete.rs  list.rs  mod.rs  rename.rs
server/src/api/testing/: mod.rs  ping.rs
server/src/auth/: crypto.rs  db.rs  extractor.rs  middleware.rs  mod.rs
server/src/enrichment/: add_nutrition.rs  improve_instructions.rs  mod.rs  normalize_ingredients.rs  normalize_times.rs
server/src/llm/: caching.rs  mod.rs
server/src/photos/: processing.rs
server/src/scraping/: fetch.rs  mod.rs  output_store.rs  parse.rs  steps.rs
server/src/scraping/steps/: fetch_images.rs  mod.rs  save_recipe.rs
(+47739 files in other folders)
