[workspace]
resolver = "2"
members = [
    "crates/ramekin-server",
    "crates/ramekin-cli",
    "crates/ramekin-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Database
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.3"

# Auth
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5.3", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
