[package]
name = "ramekin-cli"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[dependencies]
ramekin_client = { path = "generated/ramekin-client" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json", "multipart"] }

# UUIDs for photo IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
url = "2.5"

# Error handling
anyhow = "1.0"

# Paprika import
zip = "2.2"
flate2 = "1.0"
base64 = "0.22"

# Load testing
rand = "0.8"
rand_chacha = "0.3"

# Headless browser
headless_chrome = "1.0"
