[package]
name = "ramekin-cli"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[dependencies]
ramekin_client = { path = "generated/ramekin-client" }
ramekin-core = { path = "../ramekin-core" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client for RPC
reqwest = { version = "0.13", features = ["json", "multipart"] }

# UUIDs for photo IDs
uuid = { version = "1.19", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
url = "2.5"

# Error handling
anyhow = "1.0"

# Paprika import
zip = "7.0"
flate2 = "1.0"
base64 = "0.22"

# Load testing
rand = "0.9"
rand_chacha = "0.9"

# Headless browser
headless_chrome = "1.0"
