[package]
name = "ramekin-cli"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[dependencies]
ramekin_client = { path = "generated/ramekin-client" }
ramekin-core = { path = "../ramekin-core" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# HTTP client for RPC
reqwest = { version = "0.13", features = ["json", "multipart"] }

# UUIDs for photo IDs
uuid = { version = "1.20", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
url = "2.5"

# XML parsing (for sitemaps)
quick-xml = { version = "0.39", features = ["serialize"] }

# Regex for URL pattern matching
regex = "1.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTML parsing
scraper = "0.25"

# Error handling
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-flame = "0.2"

# Home directory detection
dirs = "6.0"

# Paprika import
zip = "7.2"
flate2 = "1.1"
base64 = "0.22"

# Load testing
rand = "0.9"
rand_chacha = "0.9"

# Headless browser
headless_chrome = "1.0"
