[package]
name = "ingredient-density"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "MIT"
description = "Ingredient density lookup for volume-to-weight conversion in recipes"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "import_usda"
path = "src/bin/import_usda.rs"

[dependencies.csv]
version = "1.3"
optional = true

[features]
import = ["csv"]

[dev-dependencies]
pretty_assertions = "1.4"
