[package]
name = "ramekin-core"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[dependencies]
# HTML parsing
scraper = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# URL parsing
url = "2.5"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# UUIDs for photo IDs
uuid = { version = "1.18", features = ["v4", "serde"] }

[build-dependencies]
uuid = { version = "1.18", features = ["v4"] }
