[package]
name = "ramekin-core"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[dependencies]
# HTML parsing
scraper = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# URL parsing
url = "2.5"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# Async trait for HttpClient
async-trait = "0.1"

# Concurrent hashmap for rate limiter
dashmap = "6.0"

# Timestamps for cache metadata
chrono = { version = "0.4", features = ["serde"] }

# Home directory for cache path
dirs = "6.0"

# Async runtime for rate limiter sleep
tokio = { version = "1", features = ["time"] }

# Logging
tracing = "0.1"

# UUIDs for photo IDs
uuid = { version = "1.18", features = ["v4", "serde"] }

# AI client (OpenAI-compatible API for OpenRouter)
async-openai = "0.30"

# Hashing for cache keys
sha2 = "0.10"

# Image format detection and validation
image = "0.25"

[build-dependencies]
uuid = { version = "1.18", features = ["v4"] }
