[package]
name = "ramekin-server"
version = "0.1.0"
edition = "2021"
authors = ["Gregor Stocks"]
license = "LicenseRef-Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Database
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Auth
argon2 = "0.6.0-rc.2"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (traces and logs)
opentelemetry = { version = "0.31", features = ["logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "logs"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# Image processing
image = "0.25"

# Encoding
base64 = "0.22"

# Compression (for Paprika export)
flate2 = "1.1"
zip = "7.1"

# Web scraping
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
scraper = "0.25"
ramekin-core = { path = "../ramekin-core" }
