[package]
name = "ramekin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ramekin_client = { path = "../ramekin-client" }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
url = "2.5"

# Error handling
anyhow = { workspace = true }
