[package]
name = "ramekin-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
diesel = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
